--- a/_posts/2019-04-28-howto.md
+++ b/_posts/2019-04-28-howto.md
@@ -1,7 +1,7 @@
 ---
-title: Titulo 2
-author: Tao He
-date: 2019-04-28
+title: "Titulo 2"
+author: "Tao He"
+date: '2019-04-28'
 category: Matemáticas
 layout: post
 ---
