--- a/_includes/Math.Rmd
+++ b/_includes/Math.Rmd
@@ -1,14 +1,14 @@
 #### 1. Algebra  
 $$A=\left[ \left(  \frac{5^{-2}\cdot 2^{-\frac{3}{2}} }{3^{-2} \cdot 7^{-\frac{2}{3}}}\right)^{24}  \div \left(  \frac{5^{-3}\cdot 2^{-2} }{3^{-3} \cdot 7^{-1}}\right)^{16}  \right]^{-1}$$
-ID: **01**
+ID: **M-01**
 
 #### 2. Números Complejos
 $$B=\sqrt{\frac{4}{9}} \left( \sqrt{\frac{25}{36}}-\sqrt{-\frac{4}{25}}  \right)$$
-ID: **02**
+ID: **M-02**
 
 #### 3. Lógica de Proposiciones
 $$C=p \rightarrow q \land p \rightarrow r \leftrightarrow p \rightarrow p \rightarrow  (q \land r)$$
-ID: **03**
+ID: **M-03**
 
 #### 4. Logarítmos
 Dado el sistema:
@@ -26,7 +26,7 @@ Calcular: $10^x-10^y$:
 * $b$
 * $a+b$
 
-ID: **04**
+ID: **M-04**
 
 #### 5. Ecuación lineal
 Dada la gráfica, calcular la pendiente de la siguiente función lineal que pasa por el punto $(-4,-2)$ y $(0,2)$:
@@ -41,7 +41,16 @@ abline(h = 0, v = 0,
 points(x=-2,y=-4, lwd=6, col="blue")
 points(x=0,y=2, lwd=6, col="blue")
 ```
+ID: **M-05**
 
-ID: **05**
+#### 6. Series
+¿Nombre de la siguiente serie?
+```{r}
+x<-c()
+for (n in 0:10) {
+  cat(((1/sqrt(5))*((1+sqrt(5))/2)**n)-((1/sqrt(5))*((1-sqrt(5))/2)**n), " ")
+}
+```
+ID: **M-06**
 
-### Esto es una prueba bb
+
