--- a/_includes/Programming.Rmd
+++ b/_includes/Programming.Rmd
@@ -3,7 +3,7 @@
 ```{cpp}
   cout << "Hola Mundo";
 ```
-ID: **11**
+ID: **P-01**
 
 
 #### 2.Algorítmos Condicionales
@@ -16,7 +16,7 @@ ID: **11**
     System.out.println(n + " es número impar");
   }
 ```
-ID: **12**
+ID: **P-02**
 
 #### 3. Algorítmos Iterativos
 ##### Encontrar la salida del siguiente algorítmo
@@ -28,7 +28,7 @@ for i in range(n):
   
 print(s)
 ```
-ID: **13**
+ID: **P-03**
 
 #### 4. Algoritmos Recursivos
 ##### 4.1. Encontrar la salida para el siguiente algorítmo recursivo con $n=5$
@@ -40,7 +40,7 @@ public static long factorialRecursivo(int n) {
 	return n*factorialRecursivo(n-1);			
 }
 ```
-ID: **14**
+ID: **P-04**
 
 ##### 4.2. Encontrar la salida para el siguiente algorítmo recursivo con $n=10$
 ```{java}
@@ -52,7 +52,17 @@ public static int sumaDigRec(int n) {
 	}
 }
 ```
-ID: **15**
+ID: **P-05**
+
+#### 6. Series
+¿Nombre de la siguiente serie?
+
+```{r}
+for (n in 0:10) {
+  cat(((1/sqrt(5))*((1+sqrt(5))/2)**n)-((1/sqrt(5))*((1-sqrt(5))/2)**n), " ")
+}
+```
+ID: **P-06**
 
 
 
