--- a/_includes/Math.Rmd
+++ b/_includes/Math.Rmd
@@ -1,14 +1,15 @@
 #### 1. Algebra  
 $$A=\left[ \left(  \frac{5^{-2}\cdot 2^{-\frac{3}{2}} }{3^{-2} \cdot 7^{-\frac{2}{3}}}\right)^{24}  \div \left(  \frac{5^{-3}\cdot 2^{-2} }{3^{-3} \cdot 7^{-1}}\right)^{16}  \right]^{-1}$$
-ID: **M-01**
+<span style="color:#103e75">ID: **M-01**</span>
+
 
 #### 2. Números Complejos
 $$B=\sqrt{\frac{4}{9}} \left( \sqrt{\frac{25}{36}}-\sqrt{-\frac{4}{25}}  \right)$$
-ID: **M-02**
+<span style="color:#103e75">ID: **M-02**</span>
 
 #### 3. Lógica de Proposiciones
 $$C=p \rightarrow q \land p \rightarrow r \leftrightarrow p \rightarrow p \rightarrow  (q \land r)$$
-ID: **M-03**
+<span style="color:#103e75">ID: **M-03**</span>
 
 #### 4. Logarítmos
 Dado el sistema:
@@ -26,7 +27,7 @@ Calcular: $10^x-10^y$:
 * $b$
 * $a+b$
 
-ID: **M-04**
+<span style="color:#103e75">ID: **M-04**</span>
 
 #### 5. Ecuación lineal
 Dada la gráfica, calcular la pendiente de la siguiente función lineal que pasa por el punto $(-4,-2)$ y $(0,2)$:
@@ -41,17 +42,19 @@ abline(h = 0, v = 0,
 points(x=-2,y=-4, lwd=6, col="blue")
 points(x=0,y=2, lwd=6, col="blue")
 ```
-ID: **M-05**
+<span style="color:#103e75">ID: **M-05**</span>
 
 #### 6. Distribución $\chi^2$
-Dada la gráfica, cual es el valor máximo de $x$?
+Dada la gráfica, ¿cúal es el valor máximo de $x$?
+
 ```{r}
 curve(dchisq(x,1),xlim=c(0,60),ylim=c(0,0.4))
 for(v in 2:50){
   curve(dchisq(x,v),add=T,col=v)
 }
 ```
-ID: **M-06**
+
+<span style="color:#103e75">ID: **M-06**</span>
 
 
 
