--- a/_includes/Programming.Rmd
+++ b/_includes/Programming.Rmd
@@ -59,10 +59,84 @@ public static int sumaDigRec(int n) {
 
 ```{r}
 for (n in 0:10) {
-  cat(((1/sqrt(5))*((1+sqrt(5))/2)**n)-((1/sqrt(5))*((1-sqrt(5))/2)**n), " ")
+  cat(((1/sqrt(5))*((1+sqrt(5))/2)**n)-((1/sqrt(5))   *((1-sqrt(5))/2)**n), " ")
 }
 ```
 <span style="color:#103e75">ID: **P-06**</span>
+
+## Examen
+### 5. 
+```{r}
+n<-35
+xbar<-559.72
+var2<-50.18
+alpha<-0.01
+
+xbar-(2.58*((sqrt(var2))/(sqrt(n))))
+xbar+(2.58*((sqrt(var2))/(sqrt(n))))
+# 556.6308 , 562.8092S
+```
+### 6.
+```{r}
+n1<-21
+n2<-21
+
+s2_1<-11.69
+s2_2<-46.87
+
+# 95%
+((s2_1)/(s2_2))*qf(0.05/2,n2-1,n1-1)
+((s2_1)/(s2_2))*qf(1-0.05/2,n2-1,n1-1)
+
+# 0.101203 , 0.6146751
+```
+### 7.
+```{r}
+n1<-56
+n2<-56
+
+s2_1<-17.86
+s2_2<-59.3
+
+# 99%
+((s2_1)/(s2_2))*qf(0.01/2,n2-1,n1-1)
+((s2_1)/(s2_2))*qf(1-0.01/2,n2-1,n1-1)
+
+# 0.1488336 , 0.6094703
+```
+### 9.
+```{r}
+x<- c(90.76 ,86.32 ,90.56 ,88.76, 95.41, 89.49)
+x
+# z<-(mean(x)-)/()
+
+```
+### 10.
+```{r}
+x1<-c(26,24,23,23,25,26,27)
+x2<-c(23,24,22,25,22,22,22)
+
+n1<-7
+n2<-7
+
+# sigma1 = sigma2 
+Sp2<-((n1-1)*var(x1)+(n2-1)*var(x2))/(n1+n2-2)
+Sp2
+t<-(mean(x1)-mean(x2))/(sqrt(Sp2)*sqrt(1/n1+1/n2))
+t
+# = 2.661642
+```
+### 11.
+```{r}
+x<-c(87.50, 89.13, 89.44, 87.57, 89.73, 81.85, 91.99, 89.73, 89.38, 86.41)
+x
+
+```
+
+
+
+
+
 
 
 
